# webhaskell

./: .gitignore  flake.nix  readme.md  web-hs.cabal  webhaskell.cabal
lib/: Html.hs  Types.hs  Webhandler.hs
lib/Network/WebHaskell/: Config.hs  Lookup.hs  Routing.hs  Types.hs  WebHaskell.hs
lib/Network/WebHaskell/Examples/: Impurity.hs
lib/Network/WebHaskell/Helpers/: File.hs  Html.hs  Json.hs  RegexFormat.hs
nix-support/: package.nix  repl.nix  shell.nix
