cabal-version:      2.4
name:               webhaskell
version:            0.1.0

library
    exposed-modules:
        Network.WebHaskell.WebHaskell,
        Network.WebHaskell.Helpers.Html,
        Network.WebHaskell.Helpers.Json,
        Network.WebHaskell.Types,
        Network.WebHaskell.Lookup,
        Network.WebHaskell.Examples.Impurity
    build-depends:
        base,
        ihp-hsx,
        aeson,
        aeson-qq,
        blaze-html,
        blaze-builder,
        cryptonite,
        http-conduit,
        http-types,
        monad-logger,
        password,
        persistent,
        persistent-mysql,
        persistent-postgresql,
        persistent-sqlite,
        regex-compat,
        wai,
        warp,
        time,
        bytestring,
        text,
        process,
        raw-strings-qq
    hs-source-dirs:   lib
    default-language: GHC2021
    default-extensions:
        QuasiQuotes,
        OverloadedStrings,
        LambdaCase
