cabal-version:      2.4
name:               webhaskell
version:            0.1.0

library
    exposed-modules:
        Network.WebHaskell.WebHaskell,
        Network.WebHaskell.Routing,
        Network.WebHaskell.Helpers.Html,
        Network.WebHaskell.Helpers.Json,
        Network.WebHaskell.Helpers.File,
        Network.WebHaskell.Types,
        Network.WebHaskell.Lookup,
        Network.WebHaskell.Config
        Network.WebHaskell.Examples.Impurity
    build-depends:
        base,
        ihp-hsx,
        aeson,
        aeson-qq,
        blaze-html,
        blaze-builder,
        http-conduit,
        http-types,
        wai,
        warp,
        bytestring,
        text,
        directory,
        process,
        raw-strings-qq
    hs-source-dirs:   lib
    default-language: GHC2021
    default-extensions:
        QuasiQuotes,
        OverloadedStrings,
        LambdaCase
